--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
     <modules>
         <module>json</module>
         <module>jackson</module>
+        <module>spring</module>
     </modules>
 
     <properties>
@@ -83,6 +84,7 @@
         <!-- Compile Dependencies: -->
         <logback.version>1.0.1</logback.version>
         <jackson.version>1.9.5</jackson.version>
+        <spring.version>3.1.1.RELEASE</spring.version>
 
         <!-- Test Dependencies: -->
         <easymock.version>3.1</easymock.version>
@@ -154,10 +156,44 @@
 
             <!-- 3rd party dependencies: -->
             <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>2.5</version>
+                <scope>provided</scope>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
                 <version>${jackson.version}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+                <scope>provided</scope>
+                <optional>true</optional>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+                <scope>provided</scope>
+                <optional>true</optional>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
         </dependencies>
