--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
     <modules>
         <module>json</module>
         <module>jackson</module>
+        <module>loggly</module>
         <module>spring</module>
     </modules>
 
