MongoDB access appender (consumes IAccessEcents) inspired from https://github.com/nurkiewicz/logback/tree/mongodb-appender
Signed-off-by: Christian Trutz <christian.trutz@belaso.de>

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
 
         <!-- Test Dependencies for _all_ children modules: -->
         <dependency>
