--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
         <easymock.version>3.1</easymock.version>
         <groovy.version>1.8.6</groovy.version>
         <testng.version>6.4</testng.version>
+        <jmockit.version>0.999.15</jmockit.version>
 
     </properties>
 
@@ -142,6 +143,12 @@
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
             <version>${easymock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>${jmockit.version}</version>
             <scope>test</scope>
         </dependency>
 
