removed logback-access/logback-classic dependency from parent pom

--- a/eclipse/pom.xml
+++ b/eclipse/pom.xml
@@ -27,6 +27,12 @@
     <packaging>jar</packaging>
 
     <dependencies>
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+      </dependency>
+
+
         <dependency>
             <groupId>org.eclipse.equinox</groupId>
             <artifactId>org.eclipse.equinox.common</artifactId>
