--- a/json/classic/pom.xml
+++ b/json/classic/pom.xml
@@ -27,6 +27,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
+      <dependency>
+           <groupId>ch.qos.logback</groupId>
+           <artifactId>logback-classic</artifactId>
+           <version>${logback.version}</version>
+       </dependency>
         <dependency>
             <groupId>ch.qos.logback.extensions</groupId>
             <artifactId>logback-ext-json-core</artifactId>
