--- a/loggly/pom.xml
+++ b/loggly/pom.xml
@@ -26,4 +26,12 @@
     <name>Logback Extensions :: Loggly</name>
     <packaging>jar</packaging>
 
+
+  <dependencies>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
