--- a/json/core/pom.xml
+++ b/json/core/pom.xml
@@ -26,4 +26,11 @@
     <name>Logback Extensions :: JSON :: Core</name>
     <packaging>jar</packaging>
 
+    <dependencies>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+      </dependency>
+    </dependencies>
+
 </project>
