--- a/mongodb/pom.xml
+++ b/mongodb/pom.xml
@@ -27,6 +27,16 @@
     <packaging>jar</packaging>
 
     <dependencies>
+
+        <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-access</artifactId>
+        </dependency>
+      <dependency>
+              <groupId>ch.qos.logback</groupId>
+              <artifactId>logback-classic</artifactId>
+            </dependency>
+
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
