--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -27,6 +27,10 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
