--- a/mongodb/classic/pom.xml
+++ b/mongodb/classic/pom.xml
@@ -17,36 +17,24 @@
 
     <parent>
         <groupId>ch.qos.logback.extensions</groupId>
-        <artifactId>logback-ext-parent</artifactId>
+        <artifactId>logback-ext-mongodb</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>logback-ext-mongodb</artifactId>
-    <name>Logback Extensions :: MongoDB</name>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>core</module>
-        <module>access</module>
-        <module>classic</module>
-    </modules>
+    <artifactId>logback-ext-mongodb-classic</artifactId>
+    <name>Logback Extensions :: MongoDB :: Classic</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
-    </dependencies>
-
-    <dependencyManagement>
-    <dependencies>
         <dependency>
             <groupId>ch.qos.logback.extensions</groupId>
             <artifactId>logback-ext-mongodb-core</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    </dependencyManagement>
 
 </project>
