--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
     </modules>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Compile Dependencies: -->
         <logback.version>1.0.6</logback.version>
