--- a/loggly/pom.xml
+++ b/loggly/pom.xml
@@ -38,6 +38,12 @@
       <version>1.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.simpleframework</groupId>
+      <artifactId>simple</artifactId>
+      <version>5.0.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
