--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <groupId>org.logback-extensions</groupId>
     <artifactId>logback-ext-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.1</version>
 
     <name>Logback Extensions</name>
     <url>https://github.com/qos-ch/logback-extensions/wiki</url>
