--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.logback-extensions</groupId>
         <artifactId>logback-ext-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
