--- a/loggly/pom.xml
+++ b/loggly/pom.xml
@@ -48,6 +48,12 @@
       <version>5.0.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
